--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is neverset."
-header-img: ""
+header-img: "img/post-bg-rwd.jpg"
 ---
 
 <!-- Language Selector -->
