--- a/about.html
+++ b/about.html
@@ -15,10 +15,7 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>Deutschland<br>
-    Deutschland</p></blockquote>
-
-    <p>Hey，Ich bin<strong>neverset</strong>，SW Ingenieur in Stuttgart。</p>
+    <p>Hey，I am <strong>YW</strong>, software engineer in Germany。</p>
 
     <p></p>
 
@@ -33,26 +30,6 @@ header-img: "img/post-bg-rwd.jpg"
     </ul>
 </div>
 
-<!-- English Version -->
-<!-- <div class="en post-container">
-    <blockquote><p>Yet another iOS Developer. <br>
-    Yet another Life-long Student.</p></blockquote>
-
-    <p>Hi, I am <strong>Baiying Qiu</strong>，you can call me <strong>BY</strong>. I am an iOS software engineer and currently working in Xiamen</p>
-
-    <p>This is my personal blog, through making Github Pages and Jekyll.My GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>.</p>
-    
-    <p>I am a sports enthusiast, I like fitness, running and boxing.</p>
-
-    <h5>Talks</h5>
-
-    <ul>
-    <li><a href="https://github.com">GitHub</a></li>
-    <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-    <li><a href="https://pages.github.com/">GitHub Pages</a></li>
-    <li><a href="https://qiubaiying.github.io">BY</a></li>
-    </ul>
-</div> -->
 
 <!-- Handle Language Change -->
 <script type="text/javascript">
